--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-member></app-member>
+<!-- <app-member></app-member>
+<app-member-form></app-member-form> -->
+
+<!-- //dans cette page affiche tjrs le resulatat de routing  -->
+<router-outlet></router-outlet>
+<app-template></app-template>
