--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="end center" >
-    <button>Create New</button>
+    <button routerLink="/create">Create New</button>
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -34,10 +34,14 @@
     <ng-container matColumnDef="button">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element">
-<mat-icon>edit</mat-icon>
-<mat-icon>delete</mat-icon>
+<button routerLink="/edit/{{element.id}}"  >
+    <mat-icon>edit</mat-icon>
+</button>
+<button (click)="delete(element.id)">
+    <mat-icon >delete</mat-icon>
+</button>
 
-        </td> 
+    </td> 
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
